--- a/index.html
+++ b/index.html
@@ -29,18 +29,24 @@
                 I am currently Biomedical Computing M.Sc. student at <a href=https://www.tum.de/en/">Technical University of Munich</a>.
               </p>
               <p style="text-align:justify">
-                I received my BSc degree in Electrical&Electronics Engineering, at <a href=https://www.boun.edu.tr/en-US/Index">Bogazici University</a>, where I have worked in <a href=https://vavlab.boun.edu.tr/">VAVlab</a> with <a href=https://vavlab.boun.edu.tr/burak-acar-phd">Prof. Burak Acar</a>  on Alzheimer Detection using brain connectomes. 
+                I received my BSc degree in Electrical & Electronics Engineering, at <a href=https://www.boun.edu.tr/en-US/Index"> Bogazici University</a>, where I have worked in <a href=https://vavlab.boun.edu.tr/">VAVlab</a> with <a href=https://vavlab.boun.edu.tr/burak-acar-phd">Prof. Burak Acar</a>  on Alzheimer Detection using brain connectomes. 
+              </p>
+              <p style="text-align:justify">
+                I have been working with <a href=https://martinos.org/~berkin/"> Prof. Berkin Bilgic</a> and <a href=https://birthlab.github.io/pi.html"> Prof. Qiyuan Tian</a> at <a href=https://www.martinos.org/"> Athinoula A. Martinos Center for Biomedical Imaging</a>. on intersection of diffusion MRI and deep learning.
+              </p>
+              <p style="text-align:justify">
+                I also am part of <a href=https://compai-lab.github.io/"> COMPAI Lab</a> as an intern under supervision of <a href=https://compai-lab.github.io/author/julia-a.-schnabel/"> Prof. Julia Schnabel</a> and <a href=https://compai-lab.github.io/author/veronika-zimmer/"> Veronika Zimmer, PhD</a> and <a href=https://ci.bercea.net/"> Cosmin Bercea</a> on unsupervised representation learning for Alzheimer's Disease.
               </p>
               <p style="text-align:center">
                 <a href="mailto:yigitavci32@gmail.com"><i class="fas fa-envelope fa-2x"></i></a> &nbsp  &nbsp
                 <a href="data/YigitAvci_CV_6_sep_2023.pdf" target="_blank"><i class="ai ai-cv ai-2x"></i></a> &nbsp  &nbsp
                 <a href="www.linkedin.com/in/mehmet-yigit-avci" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a> &nbsp  &nbsp
-                <a href="https://scholar.google.com/citations?user=G-x5LvkAAAAJ&hl=en"><i class="ai ai-google-scholar ai-2x"></i></a> &nbsp/&nbsp -->
+                <a href="https://scholar.google.com/citations?user=G-x5LvkAAAAJ&hl=en"><i class="ai ai-google-scholar ai-2x"></i></a> &nbsp/&nbsp
                 <a href="https://github.com/myigitavci" target="_blank"><i class="fab fa-github fa-2x"></i></a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <img style="width:100%;max-width:100%" alt="profile photo" src="images/YigitAvci.jpg" class="hoverZoomLink">   
+              <img style="width:100%;max-width:100%" alt="profile photo" src="images/YigitAvci.JPG" class="hoverZoomLink">   
             </td>
           </tr>
         </tbody></table>
