--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <img style="width:100%;max-width:100%" alt="profile photo" src="images/YigitAvci.JPG" class="hoverZoomLink">   
+              <img style="width:100%;max-width:100%" alt="profile photo" src="images/YigitAvci_circlee.JPG" class="hoverZoomLink">   
             </td>
           </tr>
         </tbody></table>
