--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a href="mailto:yigitavci32@gmail.com"><i class="fas fa-envelope fa-2x"></i></a> &nbsp  &nbsp
                 <a href="data/YigitAvci_CV_6_sep_2023.pdf" target="_blank"><i class="ai ai-cv ai-2x"></i></a> &nbsp  &nbsp
                 <a href="www.linkedin.com/in/mehmet-yigit-avci" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a> &nbsp  &nbsp
-                <a href="https://scholar.google.com/citations?user=G-x5LvkAAAAJ&hl=en"><i class="ai ai-google-scholar ai-2x"></i></a> &nbsp/&nbsp
+                <a href="https://scholar.google.com/citations?user=G-x5LvkAAAAJ&hl=en"><i class="ai ai-google-scholar ai-2x"></i></a> &nbsp &nbsp
                 <a href="https://github.com/myigitavci" target="_blank"><i class="fab fa-github fa-2x"></i></a>
               </p>
             </td>
@@ -95,7 +95,7 @@
               <b>September 2022</b> - Started working as a Machine Learning Intern at deepc.
               <br>
               <br>
-              <b>June 2022</b> - Graduated from Bogazici University with a BSc degree Electrical and Electronics Engineering!
+              <b>June 2022</b> - Graduated from Bogazici University with a BSc degree Electrical and Electronics Engineering.
             </p>
           </td>
           </tr>
