--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Mehmet Yigit Avci</name>
+                <name><span class="name">Mehmet Yigit Avci</span></name>
               </p>
               <p style="text-align:justify">
                 I am currently Biomedical Computing M.Sc. student at <a href=https://www.tum.de/en/">Technical University of Munich</a>.
