--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
-            <heading>Research Interests</heading>
+            <strong>Research Interests</strong>
             <p>
               <i class="fas fa-chevron-right fa-1x"></i>  Medical Image Analysis, MRI, Deep Learning, Unsupervised Learning
             </p>
@@ -65,7 +65,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
-            <heading>Education</heading>
+            <strong>Education</strong>
             <p>
               <i class="fas fa-graduation-cap fa-1x"></i> Msc. in Biomedical Computing, <b>TUM</b>   
               <span style="float:right;">
@@ -87,7 +87,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
-            <heading>Updates</heading>
+            <strong>Updates</strong>
             <p>
               <b>September 2022</b> - Started at TUM for my Master's Degree in Biomedical Computing.
               <br>
@@ -96,6 +96,9 @@
               <br>
               <br>
               <b>June 2022</b> - Graduated from Bogazici University with a BSc degree Electrical and Electronics Engineering.
+              <br>
+              <br>
+              <b>May 2022</b> - Presented abstract titled "Quantifying the uncertainty of neural networks using Monte Carlo dropout for safer and more accurate deep learning based quantitative MRI" in ISMRM 2022.
             </p>
           </td>
           </tr>
