--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
                 <name><span class="name">Mehmet Yigit Avci</span></name>
               </p>
               <p style="text-align:justify">
-                I am currently Biomedical Computing M.Sc. student at <a href=https://www.tum.de/en/">Technical University of Munich</a>.
+                I am currently Biomedical Computing M.Sc. student at <a href="https://www.tum.de/en/">Technical University of Munich</a>.
               </p>
               <p style="text-align:justify">
-                I received my BSc degree in Electrical & Electronics Engineering, at <a href=https://www.boun.edu.tr/en-US/Index"> Bogazici University</a>, where I have worked in <a href=https://vavlab.boun.edu.tr/">VAVlab</a> with <a href=https://vavlab.boun.edu.tr/burak-acar-phd">Prof. Burak Acar</a>  on Alzheimer Detection using brain connectomes. 
+                I received my BSc degree in Electrical & Electronics Engineering, at <a href="https://www.boun.edu.tr/en-US/Index"> Bogazici University</a>, where I have worked in <a href="https://vavlab.boun.edu.tr/">VAVlab</a> with <a href="https://vavlab.boun.edu.tr/burak-acar-phd">Prof. Burak Acar</a>  on Alzheimer Detection using brain connectomes. 
               </p>
               <p style="text-align:justify">
-                I have been working with <a href=https://martinos.org/~berkin/"> Prof. Berkin Bilgic</a> and <a href=https://birthlab.github.io/pi.html"> Prof. Qiyuan Tian</a> at <a href=https://www.martinos.org/"> Athinoula A. Martinos Center for Biomedical Imaging</a>. on intersection of diffusion MRI and deep learning.
+                I have been working with <a href="https://martinos.org/~berkin/"> Prof. Berkin Bilgic</a> and <a href="https://birthlab.github.io/pi.html"> Prof. Qiyuan Tian</a> at <a href="https://www.martinos.org/"> Athinoula A. Martinos Center for Biomedical Imaging</a>. on intersection of diffusion MRI and deep learning.
               </p>
               <p style="text-align:justify">
-                I also am part of <a href=https://compai-lab.github.io/"> COMPAI Lab</a> as an intern under supervision of <a href=https://compai-lab.github.io/author/julia-a.-schnabel/"> Prof. Julia Schnabel</a> and <a href=https://compai-lab.github.io/author/veronika-zimmer/"> Veronika Zimmer, PhD</a> and <a href=https://ci.bercea.net/"> Cosmin Bercea</a> on unsupervised representation learning for Alzheimer's Disease.
+                I also am part of <a href="https://compai-lab.github.io/"> COMPAI Lab</a> as an intern under supervision of <a href="https://compai-lab.github.io/author/julia-a.-schnabel/"> Prof. Julia Schnabel</a> and <a href="https://compai-lab.github.io/author/veronika-zimmer/"> Veronika Zimmer, PhD</a> and <a href="https://ci.bercea.net/"> Cosmin Bercea</a> on unsupervised representation learning for Alzheimer's Disease.
               </p>
               <p style="text-align:center">
                 <a href="mailto:yigitavci32@gmail.com"><i class="fas fa-envelope fa-2x"></i></a> &nbsp  &nbsp
