--- a/index.html
+++ b/index.html
@@ -105,7 +105,51 @@
         </tbody></table>
 
         <!-- PUBLICATIONS -->
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+          <td style="padding:20px;width:100%;vertical-align:middle">
+            <heading>Projects</heading>
+          </td>
+        </tr>
+      </tbody></table>
 
+      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+        <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+              <img src='images/longformer.png' width="160">
+            </div>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <!-- <a href="https://waymo.com/research/block-nerf/">
+              <papertitle>NeRF-Supervision: Learning Dense Object Descriptors from Neural Radiance Fields</papertitle>
+            </a> -->
+            <papertitle>Quantifying the uncertainty of neural networks using Monte Carlo dropout for safer and more accurate deep learning based quantitative MRI</papertitle>
+            <br>
+            <!-- <a href="https://yenchenlin.me/">Lin Yen-Chen</a>, 
+            <a href="http://www.peteflorence.com/">Pete Florence</a>,  -->
+            M Yigit Avci, Z Li, Q Fan, S Huang, B Bilgic, Q Tian
+            <!-- <a href="https://scholar.google.com/citations?user=_BPdgV0AAAAJ&hl=en">Tsung-Yi Lin</a>, 
+            <a href="https://meche.mit.edu/people/faculty/ALBERTOR@MIT.EDU">Alberto Rodriguez</a>,
+            <a href="http://web.mit.edu/phillipi/">Phillip Isola</a> -->
+            <!-- <br>
+            <em>ICRA</em>, 2022   -->
+            <br>
+            <a href="https://arxiv.org/abs/2112.01587">code</a>
+            <!-- <a href="https://arxiv.org/abs/2203.01913">arXiv</a> / 
+            <a href="https://www.youtube.com/watch?v=_zN-wVwPH1s">video</a> /
+            <a href="https://github.com/yenchenlin/nerf-supervision-public">code</a> / 
+            <a href="https://colab.research.google.com/drive/13ISri5KD2XeEtsFs25hmZtKhxoDywB5y?usp=sharing">colab</a>				 -->
+            <p></p>
+            <p style="text-align:justify">
+              Dropout is conventionally used during the training phase as regularization method and for quantifying uncertainty in deep learning. We propose to use dropout during training as well as inference steps, and average multiple predictions to improve the accuracy, while reducing and quantifying the uncertainty. The results are evaluated for fractional anisotropy (FA) and mean diffusivity (MD) maps which are obtained from only 3 direction scans. With our method, accuracy can be improved significantly compared to network outputs without dropout, especially when the training dataset is small. Moreover, confidence maps are generated which may aid in diagnosis of unseen pathology or artifacts.
+            </p>
+          </td>
+        </tr>
+       
+      </tbody></table>
+        
         <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
