--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <b>June 2022</b> - Graduated from Bogazici University with a BSc degree Electrical and Electronics Engineering.
               <br>
               <br>
-              <b>May 2022</b> - Presented abstract titled "Quantifying the uncertainty of neural networks using Monte Carlo dropout for safer and more accurate deep learning based quantitative MRI" in ISMRM 2022.
+              <b>May 2022</b> - Presented my first abstract in ISMRM 2022.
             </p>
           </td>
           </tr>
@@ -108,7 +108,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
-            <heading>Projects</heading>
+            <strong>Projects</strong>
           </td>
         </tr>
       </tbody></table>
@@ -118,14 +118,17 @@
         <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
             <div class="one">
-              <img src='images/longformer.png' width="160">
+              <img src='images/dunet.JPG' width="160">
             </div>
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
             <!-- <a href="https://waymo.com/research/block-nerf/">
               <papertitle>NeRF-Supervision: Learning Dense Object Descriptors from Neural Radiance Fields</papertitle>
             </a> -->
-            <papertitle>Quantifying the uncertainty of neural networks using Monte Carlo dropout for safer and more accurate deep learning based quantitative MRI</papertitle>
+            <a href="https://arxiv.org/abs/2112.01587">
+              <papertitle>Quantifying the uncertainty of neural networks using Monte Carlo dropout for safer and more accurate deep learning based quantitative MRI</papertitle>
+            </a>
+            
             <br>
             <!-- <a href="https://yenchenlin.me/">Lin Yen-Chen</a>, 
             <a href="http://www.peteflorence.com/">Pete Florence</a>,  -->
@@ -136,14 +139,11 @@
             <!-- <br>
             <em>ICRA</em>, 2022   -->
             <br>
-            <a href="https://arxiv.org/abs/2112.01587">code</a>
-            <!-- <a href="https://arxiv.org/abs/2203.01913">arXiv</a> / 
-            <a href="https://www.youtube.com/watch?v=_zN-wVwPH1s">video</a> /
-            <a href="https://github.com/yenchenlin/nerf-supervision-public">code</a> / 
-            <a href="https://colab.research.google.com/drive/13ISri5KD2XeEtsFs25hmZtKhxoDywB5y?usp=sharing">colab</a>				 -->
+            <a href="https://github.com/myigitavci/dropout_ISMRM">code</a>
+            <a href="https://arxiv.org/abs/2112.01587">arXiv</a> / 
             <p></p>
             <p style="text-align:justify">
-              Dropout is conventionally used during the training phase as regularization method and for quantifying uncertainty in deep learning. We propose to use dropout during training as well as inference steps, and average multiple predictions to improve the accuracy, while reducing and quantifying the uncertainty. The results are evaluated for fractional anisotropy (FA) and mean diffusivity (MD) maps which are obtained from only 3 direction scans. With our method, accuracy can be improved significantly compared to network outputs without dropout, especially when the training dataset is small. Moreover, confidence maps are generated which may aid in diagnosis of unseen pathology or artifacts.
+              Dropout is conventionally used during the training phase as regularization method and for quantifying uncertainty in deep learning. We propose to use dropout during training as well as inference steps, and average multiple predictions to improve the accuracy, while reducing and quantifying the uncertainty. With our method, accuracy can be improved significantly compared to network outputs without dropout, especially when the training dataset is small. Moreover, confidence maps are generated which may aid in diagnosis of unseen pathology or artifacts.
             </p>
           </td>
         </tr>
