--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <a href="https://arxiv.org/abs/2112.01587">
               <papertitle><b>DUnet</b>: Quantifying the uncertainty of neural networks using Monte Carlo dropout for safer and more accurate deep learning based quantitative MRI</papertitle>
             </a>
-            
+            <br>
             <br>
             <!-- <a href="https://yenchenlin.me/">Lin Yen-Chen</a>, 
             <a href="http://www.peteflorence.com/">Pete Florence</a>,  -->
@@ -151,7 +151,7 @@
         <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
             <div class="one">
-              <img src='images/dunet.JPG' width="200">
+              <img src='images/quad.JPG' width="200">
             </div>
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
@@ -159,9 +159,10 @@
               <papertitle>NeRF-Supervision: Learning Dense Object Descriptors from Neural Radiance Fields</papertitle>
             </a> -->
             <a href="https://www.sciencedirect.com/science/article/pii/S2213158223001742">
-              <papertitle><b>DUnet</b>: Validation of deep learning techniques for quality augmentation in diffusion MRI for clinical studies</papertitle>
+              <papertitle> Validation of deep learning techniques for quality augmentation in diffusion MRI for clinical studies</papertitle>
             </a>
             
+            <br>
             <br>
             <!-- <a href="https://yenchenlin.me/">Lin Yen-Chen</a>, 
             <a href="http://www.peteflorence.com/">Pete Florence</a>,  -->
@@ -171,7 +172,6 @@
             <a href="http://web.mit.edu/phillipi/">Phillip Isola</a> -->
             <!-- <br>
             <em>ICRA</em>, 2022   -->
-            <br>
             <br>
            <em>NeuroImage: Clinical, 2023</em>
             <br>
