--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
             <div class="one">
-              <img src='images/dunet.JPG' width="200">
+              <img src='images/dunet.JPG' width="240">
             </div>
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
@@ -151,7 +151,7 @@
         <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
             <div class="one">
-              <img src='images/quad.JPG' width="200">
+              <img src='images/quad.JPG' width="240">
             </div>
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
@@ -179,7 +179,7 @@
             <a href="https://www.lpi.tel.uva.es/quad22/Results.html">[QUAD results]</a>  
             <p></p>
             <p style="text-align:justify">
-              Participated in <a href="https://www.lpi.tel.uva.es/quad22/index.html">QUAD Challenge in MICCAI 2022 </a> and got the 4th place with combination of methods <a href="https://arxiv.org/abs/2112.01587">DUnet </a> and <a href="https://github.com/qiyuantian/DeepDTI">deepDTI</a> 
+              Participated in <a href="https://www.lpi.tel.uva.es/quad22/index.html">QUAD Challenge in MICCAI 2022 </a> and got the 4th place with combination of methods <a href="https://arxiv.org/abs/2112.01587">DUnet </a> and <a href="https://github.com/qiyuantian/DeepDTI">deepDTI</a>.
             </p>
           </td>
         </tr>
