quad last fixes

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 I have been working with <a href="https://martinos.org/~berkin/"> Prof. Berkin Bilgic</a> and <a href="https://birthlab.github.io/pi.html"> Prof. Qiyuan Tian</a> at <a href="https://www.martinos.org/"> Athinoula A. Martinos Center for Biomedical Imaging</a>. on intersection of diffusion MRI and deep learning.
               </p>
               <p style="text-align:justify">
-                I also am part of <a href="https://compai-lab.github.io/"> COMPAI Lab</a> as an intern under supervision of <a href="https://compai-lab.github.io/author/julia-a.-schnabel/"> Prof. Julia Schnabel</a> and <a href="https://compai-lab.github.io/author/veronika-zimmer/"> Veronika Zimmer, PhD</a> and <a href="https://ci.bercea.net/"> Cosmin Bercea</a> on unsupervised representation learning for Alzheimer's Disease.
+                I also am part of <a href="https://compai-lab.github.io/"> COMPAI Lab</a> as an intern under supervision of <a href="https://compai-lab.github.io/author/julia-a.-schnabel/"> Prof. Julia Schnabel</a> and <a href="https://compai-lab.github.io/author/veronika-zimmer/"> Veronika Zimmer, PhD</a> and <a href="https://ci.bercea.net/"> Cosmin Bercea</a> and working on unsupervised representation learning for Alzheimer's Disease.
               </p>
               <p style="text-align:center">
                 <a href="mailto:yigitavci32@gmail.com"><i class="fas fa-envelope fa-2x"></i></a> &nbsp  &nbsp
@@ -166,7 +166,7 @@
             <br>
             <!-- <a href="https://yenchenlin.me/">Lin Yen-Chen</a>, 
             <a href="http://www.peteflorence.com/">Pete Florence</a>,  -->
-            Santiago Aja-Fernandez,...Mehmet Yigit Avci, Zihan Li, Berkin Bilgic, Qiyuan Tian,... Tmasz Pieciak
+            Santiago Aja-Fernandez,...Mehmet Yigit Avci, Zihan Li, Berkin Bilgic, Qiyuan Tian,... Tomasz Pieciak
             <!-- <a href="https://scholar.google.com/citations?user=_BPdgV0AAAAJ&hl=en">Tsung-Yi Lin</a>, 
             <a href="https://meche.mit.edu/people/faculty/ALBERTOR@MIT.EDU">Alberto Rodriguez</a>,
             <a href="http://web.mit.edu/phillipi/">Phillip Isola</a> -->
