--- a/index.html
+++ b/index.html
@@ -118,32 +118,32 @@
         <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
             <div class="one">
-              <img src='images/dunet.JPG' width="200">
+              <img src='images/neurotest.JPG' width="200">
             </div>
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
             <!-- <a href="https://waymo.com/research/block-nerf/">
               <papertitle>NeRF-Supervision: Learning Dense Object Descriptors from Neural Radiance Fields</papertitle>
             </a> -->
-            <a href="https://arxiv.org/abs/2112.01587">
-              <papertitle><b>DUnet</b>: Quantifying the uncertainty of neural networks using Monte Carlo dropout for safer and more accurate deep learning based quantitative MRI</papertitle>
-            </a>
+              <papertitle> Simulation of acquisition shifts in T2 Flair MR images to stress test AI segmentation networks</papertitle>
+
+            
             <br>
             <br>
             <!-- <a href="https://yenchenlin.me/">Lin Yen-Chen</a>, 
             <a href="http://www.peteflorence.com/">Pete Florence</a>,  -->
-            M Yigit Avci, Z Li, Q Fan, S Huang, B Bilgic, Q Tian
+            Christiane Posselt, Mehmet Yigit Avci, Mehmet Yigitsoy, Patrick Schuenke, Christoph Kolbitsch ,Tobias Schaeffter, Stefanie Remmele
             <!-- <a href="https://scholar.google.com/citations?user=_BPdgV0AAAAJ&hl=en">Tsung-Yi Lin</a>, 
             <a href="https://meche.mit.edu/people/faculty/ALBERTOR@MIT.EDU">Alberto Rodriguez</a>,
             <a href="http://web.mit.edu/phillipi/">Phillip Isola</a> -->
             <!-- <br>
             <em>ICRA</em>, 2022   -->
             <br>
-            <a href="https://github.com/myigitavci/dropout_ISMRM">[code]</a>
-            <a href="https://arxiv.org/abs/2112.01587">[arXiv]</a>  
+           <em>(preprint): Journal of Medical Imaging,2023</em>
+            <br>
             <p></p>
             <p style="text-align:justify">
-              Dropout is conventionally used during the training phase as regularization method and for quantifying uncertainty in deep learning. We propose to use dropout during training as well as inference steps, and average multiple predictions to improve the accuracy, while reducing and quantifying the uncertainty. With our method, accuracy can be improved significantly compared to network outputs without dropout, especially when the training dataset is small. Moreover, confidence maps are generated which may aid in diagnosis of unseen pathology or artifacts.
+            This work's goal is to provide a simulation framework for routine neuroimaging test data, which allows for "stress testing" of 14 deep segmentation networks against acquisition shifts that commonly occur in clinical practice for T2 weighted (T2w) 15 fluid attenuated inversion recovery (FLAIR) Magnetic Resonance Imaging (MRI) protocols.
             </p>
           </td>
         </tr>
@@ -180,6 +180,38 @@
             <p></p>
             <p style="text-align:justify">
               Participated in <a href="https://www.lpi.tel.uva.es/quad22/index.html">QUAD Challenge in MICCAI 2022 </a> and got the 4th place with combination of methods <a href="https://arxiv.org/abs/2112.01587">DUnet </a> and <a href="https://github.com/qiyuantian/DeepDTI">deepDTI</a>.
+            </p>
+          </td>
+        </tr>
+        <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+            <div class="one">
+              <img src='images/dunet.JPG' width="200">
+            </div>
+          </td>
+          <td style="padding:20px;width:75%;vertical-align:middle">
+            <!-- <a href="https://waymo.com/research/block-nerf/">
+              <papertitle>NeRF-Supervision: Learning Dense Object Descriptors from Neural Radiance Fields</papertitle>
+            </a> -->
+            <a href="https://arxiv.org/abs/2112.01587">
+              <papertitle><b>DUnet</b>: Quantifying the uncertainty of neural networks using Monte Carlo dropout for safer and more accurate deep learning based quantitative MRI</papertitle>
+            </a>
+            <br>
+            <br>
+            <!-- <a href="https://yenchenlin.me/">Lin Yen-Chen</a>, 
+            <a href="http://www.peteflorence.com/">Pete Florence</a>,  -->
+            M Yigit Avci, Z Li, Q Fan, S Huang, B Bilgic, Q Tian
+            <!-- <a href="https://scholar.google.com/citations?user=_BPdgV0AAAAJ&hl=en">Tsung-Yi Lin</a>, 
+            <a href="https://meche.mit.edu/people/faculty/ALBERTOR@MIT.EDU">Alberto Rodriguez</a>,
+            <a href="http://web.mit.edu/phillipi/">Phillip Isola</a> -->
+            <!-- <br>
+            <em>ICRA</em>, 2022   -->
+            <br>
+            <a href="https://github.com/myigitavci/dropout_ISMRM">[code]</a>
+            <a href="https://arxiv.org/abs/2112.01587">[arXiv]</a>  
+            <p></p>
+            <p style="text-align:justify">
+              Dropout is conventionally used during the training phase as regularization method and for quantifying uncertainty in deep learning. We propose to use dropout during training as well as inference steps, and average multiple predictions to improve the accuracy, while reducing and quantifying the uncertainty. With our method, accuracy can be improved significantly compared to network outputs without dropout, especially when the training dataset is small. Moreover, confidence maps are generated which may aid in diagnosis of unseen pathology or artifacts.
             </p>
           </td>
         </tr>
