--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
             <div class="one">
-              <img src='images/neurotest.JPG' width="200">
+              <img src='images/neurotest.JPG' width="190">
             </div>
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
@@ -132,18 +132,18 @@
             <br>
             <!-- <a href="https://yenchenlin.me/">Lin Yen-Chen</a>, 
             <a href="http://www.peteflorence.com/">Pete Florence</a>,  -->
-            Christiane Posselt, Mehmet Yigit Avci, Mehmet Yigitsoy, Patrick Schuenke, Christoph Kolbitsch ,Tobias Schaeffter, Stefanie Remmele
+            Christiane Posselt, Mehmet Yigit Avci, Mehmet Yigitsoy, Patrick Schuenke, Christoph Kolbitsch, Tobias Schaeffter, Stefanie Remmele
             <!-- <a href="https://scholar.google.com/citations?user=_BPdgV0AAAAJ&hl=en">Tsung-Yi Lin</a>, 
             <a href="https://meche.mit.edu/people/faculty/ALBERTOR@MIT.EDU">Alberto Rodriguez</a>,
             <a href="http://web.mit.edu/phillipi/">Phillip Isola</a> -->
             <!-- <br>
             <em>ICRA</em>, 2022   -->
             <br>
-           <em>(preprint): Journal of Medical Imaging,2023</em>
+           <em>(preprint) sent to Journal of Medical Imaging, 2023</em>
             <br>
             <p></p>
             <p style="text-align:justify">
-            This work's goal is to provide a simulation framework for routine neuroimaging test data, which allows for "stress testing" of 14 deep segmentation networks against acquisition shifts that commonly occur in clinical practice for T2 weighted (T2w) 15 fluid attenuated inversion recovery (FLAIR) Magnetic Resonance Imaging (MRI) protocols.
+            This work's goal is to provide a simulation framework for routine neuroimaging test data, which allows for "stress testing" of 14 deep segmentation networks against acquisition shifts that commonly occur in clinical practice for T2w 15 FLAIR MRI protocols.
             </p>
           </td>
         </tr>
