--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <br>
             <p></p>
             <p style="text-align:justify">
-            This work's goal is to provide a simulation framework for routine neuroimaging test data, which allows for "stress testing" of 14 deep segmentation networks against acquisition shifts that commonly occur in clinical practice for T2w 15 FLAIR MRI protocols.
+            This work's goal is to provide a simulation framework for routine neuroimaging test data, which allows for "stress testing" of deep segmentation networks against acquisition shifts that commonly occur in clinical practice for T2w FLAIR MRI protocols.
             </p>
           </td>
         </tr>
