--- a/index.html
+++ b/index.html
@@ -122,10 +122,9 @@
             </div>
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
-            <!-- <a href="https://waymo.com/research/block-nerf/">
-              <papertitle>NeRF-Supervision: Learning Dense Object Descriptors from Neural Radiance Fields</papertitle>
-            </a> -->
+             <a href="https://www.researchgate.net/publication/374477972_Simulation_of_acquisition_shifts_in_T2_Flair_MR_images_to_stress_test_AI_segmentation_networks">
               <papertitle> Simulation of acquisition shifts in T2 Flair MR images to stress test AI segmentation networks</papertitle>
+            </a>
 
             
             <br>
@@ -173,7 +172,7 @@
             <!-- <br>
             <em>ICRA</em>, 2022   -->
             <br>
-           <em>NeuroImage: Clinical, 2023</em>
+           <em>ISMRM 2023, NeuroImage: Clinical, 2023</em>
             <br>
             <a href="https://www.sciencedirect.com/science/article/pii/S2213158223001742">[journal paper]</a>
             <a href="https://www.lpi.tel.uva.es/quad22/Results.html">[QUAD results]</a>  
