--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <br>
            <em>(preprint) sent to Journal of Medical Imaging, 2023</em>
             <br>
-            <a href="https://www.sciencedirect.com/science/article/pii/S2213158223001742">[journal paper]</a>
+            <a href="https://www.researchgate.net/publication/374477972_Simulation_of_acquisition_shifts_in_T2_Flair_MR_images_to_stress_test_AI_segmentation_networks">[preprint]</a>
             <p></p>
             <p style="text-align:justify">
             This work's goal is to provide a simulation framework for routine neuroimaging test data, which allows for "stress testing" of deep segmentation networks against acquisition shifts that commonly occur in clinical practice for T2w FLAIR MRI protocols.
