--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
                 I have been working with <a href="https://martinos.org/~berkin/"> Prof. Berkin Bilgic</a> and <a href="https://birthlab.github.io/pi.html"> Prof. Qiyuan Tian</a> at <a href="https://www.martinos.org/"> Athinoula A. Martinos Center for Biomedical Imaging</a>. on intersection of diffusion MRI and deep learning.
               </p>
               <p style="text-align:justify">
-                I also am part of <a href="https://compai-lab.github.io/"> COMPAI Lab</a> as an intern under supervision of <a href="https://compai-lab.github.io/author/julia-a.-schnabel/"> Prof. Julia Schnabel</a> and <a href="https://compai-lab.github.io/author/veronika-zimmer/"> Veronika Zimmer, PhD</a> and <a href="https://ci.bercea.net/"> Cosmin Bercea</a> and working on unsupervised representation learning for Alzheimer's Disease.
+                I also worked as part of <a href="https://compai-lab.github.io/"> COMPAI Lab</a> as an intern under supervision of <a href="https://compai-lab.github.io/author/julia-a.-schnabel/"> Prof. Julia Schnabel</a> and <a href="https://compai-lab.github.io/author/veronika-zimmer/"> Veronika Zimmer, PhD</a> and <a href="https://ci.bercea.net/"> Cosmin Bercea</a> on unsupervised representation learning for Alzheimer's Disease.
               </p>
+              <p style="text-align:justify">
+                I am currently working on my master thesis with these two great groups on zero-shot self-supervised dMRI reconstruction!
+              </p>              
               <p style="text-align:center">
                 <a href="mailto:yigitavci32@gmail.com"><i class="fas fa-envelope fa-2x"></i></a> &nbsp  &nbsp
                 <a href="data/YigitAvci_CV_6_sep_2023.pdf" target="_blank"><i class="ai ai-cv ai-2x"></i></a> &nbsp  &nbsp
@@ -125,14 +128,14 @@
               <papertitle>NeRF-Supervision: Learning Dense Object Descriptors from Neural Radiance Fields</papertitle>
             </a> -->
             <a>
-              <papertitle> MorphAEus: Unsupervised Alzheimer's Disease Detection and Localization with Deformable Autoencoder</papertitle>
+              <papertitle> MORPHADE: Deformable Autoencoders for Unsupervised Anomaly Detection: Application to Alzheimer's Disease </papertitle>
             </a>
             
             <br>
             <br>
             <!-- <a href="https://yenchenlin.me/">Lin Yen-Chen</a>, 
             <a href="http://www.peteflorence.com/">Pete Florence</a>,  -->
-            Mehmet Yigit Avci*, Cosmin Bercea*, Veronika Zimmer, Julia Schnabel
+            Mehmet Yigit Avci, Cosmin I. Bercea, Benedikt Wiestler, Emily Chan, Daniel Rueckert, Veronika Zimmer, Julia A. Schnabel
             <!-- <a href="https://scholar.google.com/citations?user=_BPdgV0AAAAJ&hl=en">Tsung-Yi Lin</a>, 
             <a href="https://meche.mit.edu/people/faculty/ALBERTOR@MIT.EDU">Alberto Rodriguez</a>,
             <a href="http://web.mit.edu/phillipi/">Phillip Isola</a> -->
@@ -144,8 +147,7 @@
 
             <p></p>
             <p style="text-align:justify">
-              Inspired by original idea of deformable autoencoder, so-called <a href="https://ci.bercea.net/project/morphaeus/">Morphaeus </a>, we are aiming to localize Alzheimer's Disease and classify between Alzheimer and healthy samples.
-            </p>
+              The increasing prevalence of neurodegenerative diseases, such as Alzheimer's Disease (AD), and their impact on cognitive functions underscore the imperative for enhanced diagnostic methodologies. In response, this study introduces MORPHADE (Morphological Autoencoders for Alzheimer's Disease Detection), an innovative method employing unsupervised learning for the detection of AD related morphological changes in brain magnetic resonance imaging scans. Utilizing 3D deformable autoencoders, MORPHADE advances the field in two key aspects: it incorporates a deformation loss function to improve the reconstruction of individual healthy brain anatomies, using deviations from these reconstructions as indicators of AD, and it assesses deformation field patterns to directly identify pathological markers. Our validation process demonstrates MORPHADE's effectiveness in increasing the disease classification accuracy. Significantly, the method also facilitates estimation of disease severity, showing a promising correlation with medial temporal lobe atrophy scores determined by an expert neuroradiologist. Additionally, the identification of brain regions most susceptible to AD through MORPHADE aligns with established clinical insights.            </p>
           </td>
         </tr>
         <tr>
@@ -155,7 +157,7 @@
             </div>
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
-             <a href="https://www.researchgate.net/publication/374477972_Simulation_of_acquisition_shifts_in_T2_Flair_MR_images_to_stress_test_AI_segmentation_networks">
+             <a href=" https://doi.org/10.1117/1.JMI.11.2.024013">
               <papertitle> Simulation of acquisition shifts in T2 Flair MR images to stress test AI segmentation networks</papertitle>
             </a>
 
@@ -171,7 +173,7 @@
             <!-- <br>
             <em>ICRA</em>, 2022   -->
             <br>
-           <em>(preprint) sent to Journal of Medical Imaging, 2023</em>
+           <em>Journal of Medical Imaging, 2024</em>
             <br>
             <a href="https://www.researchgate.net/publication/374477972_Simulation_of_acquisition_shifts_in_T2_Flair_MR_images_to_stress_test_AI_segmentation_networks">[preprint]</a>
             <p></p>
