--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
             <p></p>
             <p style="text-align:justify">
-              The increasing prevalence of neurodegenerative diseases, such as Alzheimer's Disease (AD), and their impact on cognitive functions underscore the imperative for enhanced diagnostic methodologies. In response, this study introduces MORPHADE (Morphological Autoencoders for Alzheimer's Disease Detection), an innovative method employing unsupervised learning for the detection of AD related morphological changes in brain magnetic resonance imaging scans. Utilizing 3D deformable autoencoders, MORPHADE advances the field in two key aspects: it incorporates a deformation loss function to improve the reconstruction of individual healthy brain anatomies, using deviations from these reconstructions as indicators of AD, and it assesses deformation field patterns to directly identify pathological markers. Our validation process demonstrates MORPHADE's effectiveness in increasing the disease classification accuracy. Significantly, the method also facilitates estimation of disease severity, showing a promising correlation with medial temporal lobe atrophy scores determined by an expert neuroradiologist. Additionally, the identification of brain regions most susceptible to AD through MORPHADE aligns with established clinical insights.            </p>
+              We present MORPHADE, an innovative unsupervised anomaly detection system utilizing a multi-head deformable autoencoder for Alzheimer's Disease detection in 3D T1-weighted brain MRI scans. Contributions include improved pseudo-healthy restoration, superior AD detection, precise localization, and severity assessment aligning with clinical evaluations. Our approach offers insights into disease detection and AD progression, supporting the potential to improve patient outcomes considerably.</p>
           </td>
         </tr>
         <tr>
@@ -175,7 +175,7 @@
             <br>
            <em>Journal of Medical Imaging, 2024</em>
             <br>
-            <a href="https://www.researchgate.net/publication/374477972_Simulation_of_acquisition_shifts_in_T2_Flair_MR_images_to_stress_test_AI_segmentation_networks">[preprint]</a>
+            <a href="https://www.researchgate.net/publication/374477972_Simulation_of_acquisition_shifts_in_T2_Flair_MR_images_to_stress_test_AI_segmentation_networks">[journal paper]</a>
             <p></p>
             <p style="text-align:justify">
             This work's goal is to provide a simulation framework for routine neuroimaging test data, which allows for "stress testing" of deep segmentation networks against acquisition shifts that commonly occur in clinical practice for T2w FLAIR MRI protocols.
@@ -242,7 +242,8 @@
             <!-- <br>
             <em>ICRA</em>, 2022   -->
             <br>
-            <a href="https://github.com/myigitavci/dropout_ISMRM">[code]</a>
+           <em>ISMRM 2022</em>
+            <br>            <a href="https://github.com/myigitavci/dropout_ISMRM">[code]</a>
             <a href="https://arxiv.org/abs/2112.01587">[arXiv]</a>  
             <p></p>
             <p style="text-align:justify">
