--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <b>September 2022</b> - Started at TUM for my Master's Degree in Biomedical Computing.
               <br>
               <br>
-              <b>September 2022</b> - Started working as a Machine Learning Intern at deepc.
+              <b>September 2022</b> - Started working as a Machine Learning Intern at deepc, working on benchmarking radiology AI, detection of body part with deep learning and NLP solutions.
               <br>
               <br>
               <b>June 2022</b> - Graduated from Bogazici University with a BSc degree Electrical and Electronics Engineering.
@@ -157,7 +157,7 @@
             </div>
           </td>
           <td style="padding:20px;width:75%;vertical-align:middle">
-             <a href=" https://doi.org/10.1117/1.JMI.11.2.024013">
+             <a href="https://doi.org/10.1117/1.JMI.11.2.024013">
               <papertitle> Simulation of acquisition shifts in T2 Flair MR images to stress test AI segmentation networks</papertitle>
             </a>
 
@@ -175,7 +175,7 @@
             <br>
            <em>Journal of Medical Imaging, 2024</em>
             <br>
-            <a href="https://www.researchgate.net/publication/374477972_Simulation_of_acquisition_shifts_in_T2_Flair_MR_images_to_stress_test_AI_segmentation_networks">[journal paper]</a>
+            <a href="https://doi.org/10.1117/1.JMI.11.2.024013">[journal paper]</a>
             <p></p>
             <p style="text-align:justify">
             This work's goal is to provide a simulation framework for routine neuroimaging test data, which allows for "stress testing" of deep segmentation networks against acquisition shifts that commonly occur in clinical practice for T2w FLAIR MRI protocols.
