--- a/index.html
+++ b/index.html
@@ -127,27 +127,28 @@
             <!-- <a href="https://waymo.com/research/block-nerf/">
               <papertitle>NeRF-Supervision: Learning Dense Object Descriptors from Neural Radiance Fields</papertitle>
             </a> -->
-            <a>
-              <papertitle> MORPHADE: Deformable Autoencoders for Unsupervised Anomaly Detection: Application to Alzheimer's Disease </papertitle>
+            <ahref="https://arxiv.org/abs/2407.03863">
+              <papertitle> Unsupervised Analysis of Alzheimer's Disease Signatures using 3D Deformable Autoencoders</papertitle>
             </a>
             
             <br>
             <br>
             <!-- <a href="https://yenchenlin.me/">Lin Yen-Chen</a>, 
             <a href="http://www.peteflorence.com/">Pete Florence</a>,  -->
-            Mehmet Yigit Avci, Cosmin I. Bercea, Benedikt Wiestler, Emily Chan, Daniel Rueckert, Veronika Zimmer, Julia A. Schnabel
+            Mehmet Yigit Avci*, Emily Chan*, Veronika A Zimmer, Daniel Rueckert, Benedikt Wiestler, Julia A Schnabel, Cosmin I. Bercea
             <!-- <a href="https://scholar.google.com/citations?user=_BPdgV0AAAAJ&hl=en">Tsung-Yi Lin</a>, 
             <a href="https://meche.mit.edu/people/faculty/ALBERTOR@MIT.EDU">Alberto Rodriguez</a>,
             <a href="http://web.mit.edu/phillipi/">Phillip Isola</a> -->
             <!-- <br>
             <em>ICRA</em>, 2022   -->
-            <br>
-           <em>preprint very soon!</em>
-            <br>
+
 
             <p></p>
+            <a href="https://github.com/ci-ber/MORPHADE">[code]</a>
+            <a href="https://arxiv.org/abs/2407.03863">[arXiv]</a>
             <p style="text-align:justify">
-              We present MORPHADE, an innovative unsupervised anomaly detection system utilizing a multi-head deformable autoencoder for Alzheimer's Disease detection in 3D T1-weighted brain MRI scans. Contributions include improved pseudo-healthy restoration, superior AD detection, precise localization, and severity assessment aligning with clinical evaluations. Our approach offers insights into disease detection and AD progression, supporting the potential to improve patient outcomes considerably.</p>
+              We present MORPHADE (Morphological Autoencoders for Alzheimer's Disease Detection), a novel unsupervised learning approach which uses deformations to allow the analysis of 3D T1-weighted brain images. To the best of our knowledge, this is the first use of deformations with deep unsupervised learning to not only detect, but also localize and assess the severity of structural changes in the brain due to AD. We obtain markedly higher anomaly scores in clinically important areas of the brain in subjects with AD compared to healthy controls, showcasing that our method is able to effectively locate AD-related atrophy. We additionally observe a visual correlation between the severity of atrophy highlighted in our anomaly maps and medial temporal lobe atrophy scores evaluated by a clinical expert. Finally, our method achieves an AUROC of 0.80 in detecting AD, out-performing several supervised and unsupervised baselines. We believe our framework shows promise as a tool towards improved understanding, monitoring and detection of AD.
+            </p>
           </td>
         </tr>
         <tr>
