--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <!-- <a href="https://waymo.com/research/block-nerf/">
               <papertitle>NeRF-Supervision: Learning Dense Object Descriptors from Neural Radiance Fields</papertitle>
             </a> -->
-            <ahref="https://arxiv.org/abs/2407.03863">
+            <a href="https://arxiv.org/abs/2407.03863">
               <papertitle> Unsupervised Analysis of Alzheimer's Disease Signatures using 3D Deformable Autoencoders</papertitle>
             </a>
             
@@ -147,7 +147,7 @@
             <a href="https://github.com/ci-ber/MORPHADE">[code]</a>
             <a href="https://arxiv.org/abs/2407.03863">[arXiv]</a>
             <p style="text-align:justify">
-              We present MORPHADE (Morphological Autoencoders for Alzheimer's Disease Detection), a novel unsupervised learning approach which uses deformations to allow the analysis of 3D T1-weighted brain images. To the best of our knowledge, this is the first use of deformations with deep unsupervised learning to not only detect, but also localize and assess the severity of structural changes in the brain due to AD. We obtain markedly higher anomaly scores in clinically important areas of the brain in subjects with AD compared to healthy controls, showcasing that our method is able to effectively locate AD-related atrophy. We additionally observe a visual correlation between the severity of atrophy highlighted in our anomaly maps and medial temporal lobe atrophy scores evaluated by a clinical expert. Finally, our method achieves an AUROC of 0.80 in detecting AD, out-performing several supervised and unsupervised baselines. We believe our framework shows promise as a tool towards improved understanding, monitoring and detection of AD.
+              We present MORPHADE (Morphological Autoencoders for Alzheimer's Disease Detection), a novel unsupervised learning approach which uses deformations to allow the analysis of 3D T1-weighted brain images. To the best of our knowledge, this is the first use of deformations with deep unsupervised learning to not only detect, but also localize and assess the severity of structural changes in the brain due to AD. We believe our framework shows promise as a tool towards improved understanding, monitoring and detection of AD.
             </p>
           </td>
         </tr>
