--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                 I received my BSc degree in Electrical & Electronics Engineering, at <a href="https://www.boun.edu.tr/en-US/Index"> Bogazici University</a>, where I have worked in <a href="https://vavlab.boun.edu.tr/">VAVlab</a> with <a href="https://vavlab.boun.edu.tr/burak-acar-phd">Prof. Burak Acar</a>  on Alzheimer Detection using brain connectomes. 
               </p>
               <p style="text-align:justify">
-                I have been working with <a href="https://martinos.org/~berkin/"> Prof. Berkin Bilgic</a> and <a href="https://birthlab.github.io/pi.html"> Prof. Qiyuan Tian</a> at <a href="https://www.martinos.org/"> Athinoula A. Martinos Center for Biomedical Imaging</a>. on intersection of diffusion MRI and deep learning.
+                I have worked with <a href="https://martinos.org/~berkin/"> Prof. Berkin Bilgic</a> and <a href="https://birthlab.github.io/pi.html"> Prof. Qiyuan Tian</a> at <a href="https://www.martinos.org/"> Athinoula A. Martinos Center for Biomedical Imaging</a>. on intersection of diffusion MRI and deep learning.
               </p>
               <p style="text-align:justify">
                 I also worked as part of <a href="https://compai-lab.github.io/"> COMPAI Lab</a> as an intern under supervision of <a href="https://compai-lab.github.io/author/julia-a.-schnabel/"> Prof. Julia Schnabel</a> and <a href="https://compai-lab.github.io/author/veronika-zimmer/"> Veronika Zimmer, PhD</a> and <a href="https://ci.bercea.net/"> Cosmin Bercea</a> on unsupervised representation learning for Alzheimer's Disease.
               </p>
               <p style="text-align:justify">
-                I am currently working on my master thesis with these two great groups on zero-shot self-supervised dMRI reconstruction!
+                I am currently working with <a href="https://www.kcl.ac.uk/people/jorge-cardoso"> Dr. Jorge Cardoso</a> on AI-based smart orchestration!
               </p>              
               <p style="text-align:center">
                 <a href="mailto:yigitavci32@gmail.com"><i class="fas fa-envelope fa-2x"></i></a> &nbsp  &nbsp
@@ -70,9 +70,15 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <strong>Education</strong>
             <p>
+              <i class="fas fa-graduation-cap fa-1x"></i> PhD, <b>King's College London</b>   
+              <span style="float:right;">
+                2024-2028
+              </span>
+              <br>
+              <br>
               <i class="fas fa-graduation-cap fa-1x"></i> Msc. in Biomedical Computing, <b>TUM</b>   
               <span style="float:right;">
-                2022-Present
+                2022-2024
               </span>
               <br>
               <br>
@@ -92,6 +98,15 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <strong>Updates</strong>
             <p>
+              <b>October 2024</b> - Started my PhD at King's College.
+              <br>
+              <br>
+              <b>October 2024</b> - Finished my my Master's Degree in Biomedical Computing at TUM!
+              <br>
+              <br>
+              <b>October 2024</b> - Received Best Paper Award for our work on Unsupervised Alzheimer's Disease Analysis in MICCAI EMERGE Workshop!
+              <br>
+              <br>
               <b>September 2022</b> - Started at TUM for my Master's Degree in Biomedical Computing.
               <br>
               <br>
