--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <name><span class="name">Mehmet Yigit Avci</span></name>
               </p>
               <p style="text-align:justify">
-                I am currently Biomedical Computing M.Sc. student at <a href="https://www.tum.de/en/">Technical University of Munich</a>.
+                I am currently <a href="https://www.drive-health.org.uk/"> DRIVE-Health.</a> PhD student at <a href="https://www.kcl.ac.uk/"> King's College London.</a>.
               </p>
               <p style="text-align:justify">
                 I received my BSc degree in Electrical & Electronics Engineering, at <a href="https://www.boun.edu.tr/en-US/Index"> Bogazici University</a>, where I have worked in <a href="https://vavlab.boun.edu.tr/">VAVlab</a> with <a href="https://vavlab.boun.edu.tr/burak-acar-phd">Prof. Burak Acar</a>  on Alzheimer Detection using brain connectomes. 
